--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 djangorestframework~=3.14.0
 Django~=4.2.10
 django-cors-headers~=4.3.1
+psycopg2~=2.9.9
 psycopg2-binary==2.9.9
 weasyprint==61.2
-PyJWT==2.8.0
+djangorestframework-simplejwt~=5.3.1
+djoser~=2.2.3
