--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,4 @@ django-cors-headers~=4.3.1
 psycopg2~=2.9.9
 psycopg2-binary==2.9.9
 weasyprint==61.2
-djangorestframework-simplejwt~=5.3.1
-djoser~=2.2.3
+PyJWT==2.8.0
